--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   </head>
   <body>
     <header>
-      <input type="text" name="Search-Bar" value="">
+      <input type="text" name="Search-Bar" value="Search">
     </header>
-    <section id="container">
-
-    </section>
+    <div class="results">
+      <div class="">
+        <h1>Search Results</h1>
+      </div>
+      <section id="container">
+        
+      </section>
+    </div>
   </body>
 </html>
