first fetch result working

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   </head>
   <body>
     <header>
-      <input type="text" name="Search-Bar" value="Search">
+      <input type="s" name="Search-Bar" value="Search">
     </header>
     <div class="results">
-      <div class="">
+      <div>
         <h1>Search Results</h1>
       </div>
       <section id="container">
-        
+        <ul id="list">
+
+        </ul>
       </section>
     </div>
   </body>
