started search bar editing and functions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
-      <input type="s" name="Search-Bar" value="Search">
+      <form class="form" action="index.html" method="post">
+        <button type="submit">Recipe Search</button>
+        <input type="search" name="Search-Bar" value="">
+      </form>
     </header>
     <div class="results">
       <div>
