cant get search bar to work

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
-      <form class="form" action="index.html" method="post">
-        <button type="submit">Recipe Search</button>
-        <input type="search" name="Search-Bar" value="">
+      <form class="form" action="index.html" method="get">
+        <button type="submit">Search</button>
+        <input id=""type="search" name="q" value="">
       </form>
     </header>
     <div class="results">
